--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next13-ts-tailwind",
+  "name": "dockerfile-blueprint",
   "version": "0.1.0",
   "scripts": {
     "dev": "next dev",
